[package]
name = "black-sun"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.6.0"
tokio = { version = "1.44.0", features = ["full"] }
tokio-tungstenite = "0.26.0"
tower-http =  { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
